# FFmpeg_3_3

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/arm64-v8a/include/libavutil/: internal.h
app/libs/armeabi-v7a/include/libavformat/: network.h
app/libs/armeabi-v7a/include/libavutil/: timer.h
app/src/androidTest/java/com/example/FFmpeg3_3_9/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/hudun/ffmpeg3_3_9/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_cmd.c
app/src/main/cpp/ffmpeg/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h
app/src/main/cpp/include/libavcodec/: mathops.h
app/src/main/cpp/include/libavformat/: os_support.h
app/src/main/java/com/example/FFmpeg3_3_9/: FFmpegCmd.java  MainActivity.kt
app/src/main/java/com/hudun/ffmpeg3_3_9/: FFmpegCmd.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/FFmpeg3_3_9/: ExampleUnitTest.kt
app/src/test/java/com/hudun/ffmpeg3_3_9/: ExampleUnitTest.java
cmd/: build_ffmpeg_with_x264_fdkaac_merge.sh  build_x264.sh  config.sh
gradle/wrapper/: gradle-wrapper.properties
